<resources>
    <string name="favoritesLabel">favorites</string>
    <string name="TextFavorites">Favorites</string>
    <string name="spinner_categories">Select Category</string>
    <string name="radiusText">State:</string>
    <string name="discoveryText">Discovery Section</string>
    <string name="descriptionText">Description</string>
    <string name="locationText">Location</string>
    <string name="categoryText">Keyword:</string>
    <string name="textAddtoFav">Add To Favorites</string>
    <string name="textDiscoveryHeading" />
    <string name="textHeadingDisc">Discovery Page</string>
    <string name="textResultsHeading">Results:</string>


    //Dropdown Category Choices

    <string-array name="categories_array">
        <item>Math</item>
        <item>Science</item>
        <item>History</item>
        <item>English</item>
        <item>Art</item>
        <item>Engineering</item>

    </string-array>


    //Dropdown Radius Choices

    <string-array name="radius_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>


    </string-array>
    <string name="app_name">Find My Future</string>
    <string name="goButton">Go!</string>
    <string name="HomeButton" />
    <string name="favoritesButton" />
    <string name="resultsStr">Discover jobs you might like!</string>
    <string name="favoritesStr">Favorites</string>
    <string name="titleTextView" />
    <string name="companyTextView" />
    <string name="descriptionTextView" />
    <string name="addressTextView" />
    <string name="faveButton">Favorites</string>
    <string name="homeButton">Home</string>
    <string name="addToFavorites">Add</string>
    <string name="favesText" />
    <string name="homeText">Home</string>/>
    <string name="nameApp">Find My Future</string>
    <string name="appName">Find My Future</string>
    <string name="title_activity_dbpopulator" />
    <string name="instructionsTextView">Click on a  job to add it to your favorites and press and hold to visit the website!</string>
    <string name="removeButton">Remove</string>


</resources>
