<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView

        android:id="@+id/titleTextView"
        android:layout_width="127dp"
        android:layout_height="58dp"
        android:text="@string/titleTextView" />

    <TextView

        android:id="@+id/companyTextView"
        android:layout_width="141dp"
        android:layout_height="58dp"
        android:text="@string/companyTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="142dp"
        android:layout_height="58dp"
        android:text="@string/descriptionTextView" />

    <TextView
        android:id="@+id/addressTextView"
        android:layout_width="127dp"
        android:layout_height="57dp"
        android:text="@string/addressTextView" />

</LinearLayout>
