<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:clickable="true">

        <ToggleButton
            android:id="@+id/removeFromFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="Remove"
            android:textOn="Removed" />

        <TextView

            android:id="@+id/titleTextView"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/titleTextView" />

        <TextView

            android:id="@+id/companyTextView"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/companyTextView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/descriptionTextView" />

        <TextView
            android:id="@+id/addressTextView"
            android:layout_width="120dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/addressTextView" />
    </LinearLayout>

</FrameLayout>

