<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.danramirez.afg.MainActivity"
    tools:layout_editor_absoluteY="89dp">


    <EditText
        android:id="@+id/zipCodeEditText"
        style="@android:style/Widget.AutoCompleteTextView"

        android:layout_width="120dp"
        android:layout_height="54dp"
        android:layout_marginBottom="96dp"
        android:layout_marginTop="97dp"
        android:ems="10"
        android:hint="@string/zipCodeText"
        android:inputType="number"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/catSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/zipCodeText"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="62dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/zipCodeText"
        app:layout_constraintBottom_toBottomOf="@+id/zipCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/zipCodeEditText"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/catSpinner"
        android:layout_width="0dp"
        android:layout_height="19dp"


        android:layout_marginEnd="13dp"


        android:layout_marginStart="12dp"
        android:prompt="@string/spinner_categories"
        app:layout_constraintBottom_toBottomOf="@+id/goButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/descriptionText"
        app:layout_constraintTop_toTopOf="@+id/goButton" />


    <Spinner
        android:id="@+id/radSpinner"
        android:layout_width="110dp"
        android:layout_height="23dp"


        android:layout_marginEnd="61dp"
        android:layout_marginStart="61dp"
        android:prompt="@string/spinner_categories"
        app:layout_constraintBottom_toBottomOf="@+id/goButton"
        app:layout_constraintEnd_toStartOf="@+id/zipCodeEditText"
        app:layout_constraintStart_toStartOf="@+id/discoveryListView"
        app:layout_constraintTop_toTopOf="@+id/goButton" />

    <TextView
        android:id="@+id/descriptionText"
        android:layout_width="361dp"
        android:layout_height="41dp"
        android:text="@string/descriptionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/locationText"
        android:layout_width="0dp"
        android:layout_height="41dp"
        android:layout_marginEnd="3dp"
        android:layout_marginStart="3dp"
        android:text="@string/locationText"
        app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
        app:layout_constraintEnd_toEndOf="@+id/catSpinner"
        app:layout_constraintStart_toEndOf="@+id/discoveryListView" />

    <TextView
        android:id="@+id/categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="1dp"
        android:text="@string/categoryText"
        app:layout_constraintBottom_toTopOf="@+id/catSpinner"
        app:layout_constraintStart_toStartOf="@+id/catSpinner" />


    <ImageButton
        android:id="@+id/homeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/HomeButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoveryListView"
        app:srcCompat="@android:drawable/btn_star" />

    <ImageButton
        android:id="@+id/favoritesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="5dp"
        android:contentDescription="@string/favoritesButton"
        android:onClick="displayUserfaves"
        app:layout_constraintBottom_toBottomOf="@+id/favoritesLabel"
        app:layout_constraintEnd_toEndOf="@+id/favoritesLabel"
        app:srcCompat="@android:drawable/ic_menu_add" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="@string/app_name"
        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/discoveryListView" />

    <TextView
        android:id="@+id/headingForDiscovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="18dp"
        android:text="@string/textHeadingDisc"
        android:textColorLink="@android:color/holo_blue_bright"
        android:textSize="20pt"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/descriptionText"
        app:layout_constraintStart_toStartOf="@+id/descriptionText" />

    <TextView
        android:id="@+id/textdescribeAdd"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/textAddtoFav"
        app:layout_constraintBaseline_toBaselineOf="@+id/descriptionText"
        app:layout_constraintEnd_toStartOf="@+id/descriptionText"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/radiusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginStart="42dp"
        android:text="@string/radiusText"
        app:layout_constraintBottom_toTopOf="@+id/radSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/discoveryListView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="73dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="71dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/favoritesLabel"
        app:layout_constraintEnd_toStartOf="@+id/favoritesLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textdescribeAdd" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:onClick="displayUserInfo"
        android:text="@string/goButton"
        app:layout_constraintBottom_toTopOf="@+id/headingForDiscovery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/resultsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/resultsStr"
        app:layout_constraintBottom_toTopOf="@+id/favoritesButton"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/favoritesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:layout_marginEnd="43dp"
        android:text="@string/favoritesStr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
